--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,186 @@ html[data-theme="dark"] .aud-btn.active {
   </div>
 </details>
 
+<!-- ====================================================================== -->
+<!-- ⭐ OPTION C — COMPLETE SHA EDUCATION + COMPARISON + AVALANCHE SUITE  -->
+<!-- ====================================================================== -->
+
+<details class="novak-collapse" style="margin-top:42px;">
+  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+    🔐 NOVAK SHA Knowledge Center — Simple → Deep → Interactive
+  </summary>
+
+  <div class="card" style="padding:28px; margin-top:18px; font-size:16px; line-height:1.6;">
+
+    <!-- ====================================================== -->
+    <!-- 1. SIMPLE EXPLANATION -->
+    <!-- ====================================================== -->
+    <h2>1. SHA Explained Simply</h2>
+
+    <p>
+      SHA is a <strong>Secure Hash Algorithm</strong> — a one-way fingerprint machine.
+    </p>
+
+    <pre class="diagram-box">
+DATA → [ SHA Machine ] → UNIQUE HASH
+    </pre>
+
+    <p>
+      One tiny change gives a totally different fingerprint.  
+      This is how NOVAK spots invisible tampering.
+    </p>
+
+    <!-- ====================================================== -->
+    <!-- 2. CLICKABLE DEFINITIONS -->
+    <!-- ====================================================== -->
+
+    <details class="sub-collapse">
+      <summary>🔢 What is “64 hex characters”?</summary>
+      <div class="sub-card">
+        <p>
+          A SHA-256 hash is 64 characters long, using digits 0-9 and letters a-f.
+          These represent 256 bits of mathematical output.
+        </p>
+      </div>
+    </details>
+
+    <details class="sub-collapse">
+      <summary>📏 What are “256 bits”?</summary>
+      <div class="sub-card">
+        <p>
+          “Bits” measure information.  
+          256 bits is astronomically large — impossible to brute force.
+        </p>
+      </div>
+    </details>
+
+    <details class="sub-collapse">
+      <summary>⚙️ What is SHA-256?</summary>
+      <div class="sub-card">
+        <p>
+          SHA-256 is the most widely trusted secure hash in government, banking,  
+          healthcare, cybersecurity, and NOVAK.
+        </p>
+      </div>
+    </details>
+
+    <!-- ====================================================== -->
+    <!-- 3. SHA FAMILY TABLE -->
+    <!-- ====================================================== -->
+    <h2 style="margin-top:36px;">2. SHA Family (Generations)</h2>
+
+    <pre class="diagram-box">
+SHA-1     ❌ Broken — not safe  
+SHA-256   ✅ Standard, secure  
+SHA-384   🔐 High-security (DoD Suite-B)  
+SHA-512   🔒 Very strong  
+SHA-3     🧪 Newest generation (Keccak)
+    </pre>
+
+    <!-- ====================================================== -->
+    <!-- 4. WHERE SHA IS USED -->
+    <!-- ====================================================== -->
+    <h2 style="margin-top:32px;">3. Where SHA Is Used</h2>
+
+    <pre class="diagram-box">
+VA Systems             → SHA-256
+Healthcare             → SHA-256
+Banking / IRS          → SHA-256 / 512
+TLS / HTTPS            → SHA-256 / 384
+DoD & NSA              → SHA-384
+Bitcoin                → SHA-256
+Ethereum               → Keccak / SHA-3
+    </pre>
+
+    <!-- ====================================================== -->
+    <!-- 5. TECHNICAL BREAKDOWN -->
+    <!-- ====================================================== -->
+    <h2 style="margin-top:32px;">4. Technical Breakdown</h2>
+
+    <pre class="diagram-box">
+Algorithm: SHA-256  
+Digest:    256 bits  
+Output:    64 hex chars  
+FIPS:      Approved (180-4)  
+Speed:     Hardware accelerated  
+Use:       Integrity + execution checks
+    </pre>
+
+    <!-- ====================================================== -->
+    <!-- 6. AVALANCHE EFFECT -->
+    <!-- ====================================================== -->
+    <details class="sub-collapse" style="margin-top:32px;">
+      <summary>⚡ Avalanche Effect (Click to Expand)</summary>
+      <div class="sub-card">
+        <pre class="diagram-box">
+"TEST" → 94ee0593…  
+"TeST" → 8d3b72f1…  
+"test" → 9f86d081…
+
+One tiny change → completely different hash.
+        </pre>
+        <p>
+          This effect makes SHA perfect for catching silent corruption or fraud.
+        </p>
+      </div>
+    </details>
+
+    <!-- ====================================================== -->
+    <!-- 7. WHY NOVAK USES SHA-256 -->
+    <!-- ====================================================== -->
+    <h2 style="margin-top:32px;">5. Why NOVAK Uses SHA-256</h2>
+
+    <ul style="margin-left:20px;">
+      <li>✔ Federally recognized</li>
+      <li>✔ Supported by WebCrypto everywhere</li>
+      <li>✔ Impossible to forge</li>
+      <li>✔ Fast enough for real-time gating</li>
+      <li>✔ Proven across military, government, banking</li>
+    </ul>
+
+    <p style="margin-top:12px; font-weight:600;">
+      NOVAK refuses to act unless SHA-256 proves the data is unchanged.
+    </p>
+
+    <!-- ====================================================== -->
+    <!-- 8. COMPARISON: SHA vs MD5 vs CRC -->
+    <!-- ====================================================== -->
+
+    <details class="sub-collapse" style="margin-top:32px;">
+      <summary>📊 SHA vs MD5 vs CRC (Click to Compare)</summary>
+      <div class="sub-card">
+
+        <pre class="diagram-box">
+ALGORITHM | SECURITY     | USE TODAY
+----------|--------------|----------------------
+CRC32     | ❌ None       | File transfers only
+MD5       | ❌ Broken     | Legacy checks
+SHA-256   | ✅ Strong     | NOVAK, VA, DoD, banking
+SHA-3     | 🧪 New       | Crypto research, Ethereum
+        </pre>
+
+      </div>
+    </details>
+
+    <!-- ====================================================== -->
+    <!-- 9. INTERACTIVE PUZZLES -->
+    <!-- ====================================================== -->
+
+    <details class="sub-collapse" style="margin-top:32px;">
+      <summary>🧩 Hash Puzzles & Learning Games</summary>
+      <div class="sub-card">
+        <p>Coming next sprint:</p>
+        <ul style="margin-left:20px;">
+          <li>🧠 Hash Memory Match</li>
+          <li>🕵️ Spot the Tampering</li>
+          <li>🚨 Fraud Detector Game</li>
+          <li>⚡ Avalanche Animation</li>
+        </ul>
+      </div>
+    </details>
+
+  </div>
+</details>
 
 
 <!-- ======================================================= -->
