--- a/index.html
+++ b/index.html
@@ -785,6 +785,135 @@ html[data-theme="dark"] .aud-btn.active {
       ✅ Got it — Hide
     </button>
   </div>
+
+<!-- ====================================================== -->
+<!-- ⭐ 60-SECOND NOVAK OVERVIEW — COLLAPSIBLE -->
+<!-- ====================================================== -->
+<details class="novak-collapse" style="margin-top:32px;">
+  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+    ⏱️ 60-Second NOVAK Overview (For Everyone)
+  </summary>
+
+  <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
+
+    <h2 style="margin-top:0;">What NOVAK Does — In Plain English</h2>
+
+    <p><strong>NOVAK prevents computers from acting on wrong information.</strong></p>
+
+    <p>
+      Before any automated system — VA claims, AI, robots, finance, healthcare —
+      is allowed to <em>make a decision</em>, NOVAK forces it to prove:
+    </p>
+
+    <ul style="margin-left:20px;">
+      <li>✔ The <strong>input</strong> is unchanged</li>
+      <li>✔ The <strong>rule</strong> used is correct</li>
+      <li>✔ The <strong>output</strong> matches that rule</li>
+      <li>✔ Nothing was silently altered, corrupted, or tampered with</li>
+    </ul>
+
+    <p style="margin-top:18px;">
+      NOVAK is the world’s first <strong>proof-before-action</strong> system.
+    </p>
+
+    <h3 style="margin-top:26px;">Why It Matters</h3>
+    <ul style="margin-left:20px;">
+      <li>✔ Stops fraud before it happens</li>
+      <li>✔ Stops automation errors before harm occurs</li>
+      <li>✔ Blocks corrupted data from executing</li>
+      <li>✔ Makes government systems provable and traceable</li>
+      <li>✔ Works in real time, locally, without blockchain</li>
+    </ul>
+
+    <p style="margin-top:22px; font-weight:600;">
+      NOVAK is the safety layer automation should have had for 50 years.
+    </p>
+
+  </div>
+</details>
+
+ <!-- ====================================================== -->
+<!-- ⭐ NOVAK vs THE WORLD — COLLAPSIBLE DIAGRAM BLOCK -->
+<!-- ====================================================== -->
+<details class="novak-collapse" style="margin-top:32px;">
+  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+    🌍 NOVAK vs TLS, Blockchain, Logging & AI Safety (Diagram)
+  </summary>
+
+  <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
+
+    <h2 style="margin-top:0;">NOVAK vs Existing Technologies</h2>
+
+    <pre class="diagram-box" style="white-space:pre; font-size:14px;">
+
+SYSTEM           | WHEN IT CHECKS | WHAT IT GUARANTEES     | CAN IT STOP BAD ACTION?
+-----------------|----------------|-------------------------|--------------------------
+TLS / SSL        | During transit | Encryption only         | ❌ No
+Blockchain       | After action   | Historical record       | ❌ No
+Logging / SIEM   | After action   | Audit trail             | ❌ No
+AI Safety Rules  | Before action  | Policy hints            | ❌ No (easily bypassed)
+Bitcoin / Crypto | After action   | Ledger correctness      | ❌ No
+NOVAK Protocol   | BEFORE action  | Input=Rule=Output match | ✅ YES
+    </pre>
+
+    <p style="margin-top:18px;">
+      Only NOVAK performs <strong>real-time cryptographic gating</strong> of automated actions.
+    </p>
+
+    <p style="font-weight:600;">
+      That is what makes NOVAK civilization infrastructure — not just a tool.
+    </p>
+
+  </div>
+</details>
+
+  <!-- ====================================================== -->
+<!-- ⭐ NOVAK SELF-VERIFICATION BLOCK -->
+<!-- ====================================================== -->
+<details class="novak-collapse" style="margin-top:32px;">
+  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+    🔍 Verify NOVAK Itself (Source, Laws, Version, Hashes)
+  </summary>
+
+  <div class="card" style="padding:28px; margin-top:16px; font-size:16px;">
+
+    <h2 style="margin-top:0;">NOVAK Self-Verification</h2>
+
+    <p>
+      NOVAK practices what it enforces:  
+      <strong>we verify ourselves using our own rules.</strong>
+    </p>
+
+    <pre class="diagram-box" style="white-space:pre; font-size:14px;">
+NOVAK Version:     1.0.0
+Laws Included:     L0–L15 + PL-X + PS-X
+Protocol Modules:  HVET + EIR + RGAC + Safety Gate
+
+SHA-256 (source):  <span id="novakSourceHash">[computed live]</span>
+SHA-256 (laws):    <span id="novakLawsHash">[computed live]</span>
+SHA-256 (UI):      <span id="novakUIHash">[computed live]</span>
+Timestamp:         <span id="novakTimestamp">[local time]</span>
+    </pre>
+
+    <p>
+      This block demonstrates that NOVAK uses its own cryptographic process  
+      to guarantee the authenticity of:
+    </p>
+
+    <ul style="margin-left:20px;">
+      <li>✔ The Laws</li>
+      <li>✔ The Protocol definitions</li>
+      <li>✔ The user interface used to verify data</li>
+      <li>✔ The entire educational suite</li>
+    </ul>
+
+    <p style="margin-top:18px; font-weight:600;">
+      When even the protocol verifies itself — trust becomes mathematical.
+    </p>
+
+  </div>
+</details>
+
   
    <!-- EXPLAINER BUTTONS -->
   <div style="margin-top:26px;" class="pill-row">
