--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@ SHA-3     | 🧪 New       | Crypto research, Ethereum
 
 <details class="novak-collapse" style="margin-top:32px;">
   <summary style="cursor:pointer; font-size:18px; padding:12px 0;">
-    ❓ What Is SHA? — Simple → Technical → Diagrams → NOVAK Use
+    🔐 NOVAK SHA Knowledge Center — Simple → Deep → Interactive → Technical → Diagrams → NOVAK Use
   </summary>
 
   <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
