--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- ✅ NOVAK Protocol — Final Public Demo Build (PART 1 of 3) -->
+5. Why NOVAK Uses SHA-256<!-- ✅ NOVAK Protocol — Final Public Demo Build (PART 1 of 3) -->
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
@@ -1146,25 +1146,6 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 </details>
 
     <!-- ====================================================== -->
-    <!-- 3. SHA FAMILY TABLE -->
-    <!-- ====================================================== -->
-    <h2 style="margin-top:36px;">2. SHA Family (Generations)</h2>
-
-    <!-- ====================================================== -->
-    <!-- 5. TECHNICAL BREAKDOWN -->
-    <!-- ====================================================== -->
-    <h2 style="margin-top:32px;">4. Technical Breakdown</h2>
-
-    <pre class="diagram-box">
-Algorithm: SHA-256  
-Digest:    256 bits  
-Output:    64 hex chars  
-FIPS:      Approved (180-4)  
-Speed:     Hardware accelerated  
-Use:       Integrity + execution checks
-    </pre>
-
-    <!-- ====================================================== -->
     <!-- 6. AVALANCHE EFFECT -->
     <!-- ====================================================== -->
     <details class="sub-collapse" style="margin-top:32px;">
@@ -1182,27 +1163,6 @@ One tiny change → completely different hash.
         </p>
       </div>
     </details>
-
-    <!-- ====================================================== -->
-    <!-- 7. WHY NOVAK USES SHA-256 -->
-    <!-- ====================================================== -->
-    <h2 style="margin-top:32px;">5. Why NOVAK Uses SHA-256</h2>
-
-    <ul style="margin-left:20px;">
-      <li>✔ Federally recognized</li>
-      <li>✔ Supported by WebCrypto everywhere</li>
-      <li>✔ Impossible to forge</li>
-      <li>✔ Fast enough for real-time gating</li>
-      <li>✔ Proven across military, government, banking</li>
-    </ul>
-
-    <p style="margin-top:12px; font-weight:600;">
-      NOVAK refuses to act unless SHA-256 proves the data is unchanged.
-    </p>
-
-    <!-- ====================================================== -->
-    <!-- 8. COMPARISON: SHA vs MD5 vs CRC -->
-    <!-- ====================================================== -->
 
     <details class="sub-collapse" style="margin-top:32px;">
       <summary>📊 SHA vs MD5 vs CRC (Click to Compare)</summary>
