--- a/index.html
+++ b/index.html
@@ -1244,6 +1244,21 @@ INPUT  →  [ SHA Blender ]  →  UNIQUE OUTPUT
     <p style="font-weight:600;">
       Change even ONE letter → the entire fingerprint becomes totally different.
     </p>
+
+
+    <p>
+      SHA is a <strong>Secure Hash Algorithm</strong> — a one-way fingerprint machine.
+    </p>
+
+    <pre class="diagram-box">
+DATA → [ SHA Machine ] → UNIQUE HASH
+    </pre>
+
+    <p>
+      One tiny change gives a totally different fingerprint.  
+      This is how NOVAK spots invisible tampering.
+    </p>
+    
 <br>
     <!-- ====================================================== -->
     <!-- 2. CLICKABLE DEFINITIONS -->
