--- a/index.html
+++ b/index.html
@@ -1243,67 +1243,68 @@ DATA → [ SHA Machine ] → UNIQUE HASH
       This is how NOVAK spots invisible tampering.
     </p>
     
-<br>
-    <!-- ====================================================== -->
-    <!-- 2. CLICKABLE DEFINITIONS -->
-    <!-- ====================================================== -->
+<!-- ====================================================== -->
+<!-- 2. CLICKABLE DEFINITIONS -->
+<!-- ====================================================== -->
 
-    <details class="sub-collapse">
-      <summary>🔢 What is “64 hex characters”?</summary>
-      <div class="sub-card">
-        <p>
-          A SHA-256 hash is 64 characters long, using digits 0-9 and letters a-f.
-          These represent 256 bits of mathematical output.
-        </p>
-      </div>
-    </details>
-
-    <details class="sub-collapse">
-      <summary>📏 What are “256 bits”?</summary>
-      <div class="sub-card">
-        <p>
-          “Bits” measure information.  
-          256 bits is astronomically large — impossible to brute force.
-        </p>
-      </div>
-    </details>
-
-    <details class="sub-collapse">
-      <summary>⚙️ What is SHA-256?</summary>
-      <div class="sub-card">
-        <p>
-          SHA-256 is the most widely trusted secure hash in government, banking,  
-          healthcare, cybersecurity, and NOVAK.
-        </p>
-      </div>
-
-    <!-- =================================================== -->
-    <!-- 2. SHA FAMILY OVERVIEW WITH COLOR CODE -->
-    <!-- =================================================== -->
-    <hr style="margin:26px 0; opacity:0.35;">
-
-    <h2>🟪 2. The SHA Family (Versions & Security)</h2>
-
+<details class="sub-collapse">
+  <summary>🔢 What is “64 hex characters”?</summary>
+  <div class="sub-card">
     <p>
-      SHA has several generations — from old and unsafe to modern and secure:
+      A SHA-256 hash is 64 characters long, using digits 0–9 and letters a–f.
+      These represent 256 bits of mathematical output.
     </p>
+  </div>
+</details>
 
-    <div class="sha-table">
+<details class="sub-collapse">
+  <summary>📏 What are “256 bits”?</summary>
+  <div class="sub-card">
+    <p>
+      “Bits” measure information.  
+      256 bits is astronomically large — impossible to brute force.
+    </p>
+  </div>
+</details>
 
-      <div class="sha-row">
-        <div class="sha-name sha-broken">SHA-1</div>
-        <div class="sha-desc">❌ Broken — collisions discovered (never use)</div>
-      </div>
+<details class="sub-collapse">
+  <summary>⚙️ What is SHA-256?</summary>
+  <div class="sub-card">
+    <p>
+      SHA-256 is the most widely trusted secure hash in government, banking,  
+      healthcare, cybersecurity, and NOVAK.
+    </p>
+  </div>
+</details>   <!-- ✅ THIS WAS MISSING -->
 
-      <div class="sha-row">
-        <div class="sha-name sha-good">SHA-256</div>
-        <div class="sha-desc">✅ Modern standard — fast, secure, widely approved</div>
-      </div>
+<!-- =================================================== -->
+<!-- 2. SHA FAMILY OVERVIEW WITH COLOR CODE -->
+<!-- =================================================== -->
+<hr style="margin:26px 0; opacity:0.35;">
 
-      <div class="sha-row">
-        <div class="sha-name sha-good">SHA-384</div>
-        <div class="sha-desc">🔐 Used in DoD Suite-B ECC-384 cryptography</div>
-      </div>
+<h2>🟪 2. The SHA Family (Versions & Security)</h2>
+
+<p>
+  SHA has several generations — from old and unsafe to modern and secure:
+</p>
+
+<div class="sha-table">
+
+  <div class="sha-row">
+    <div class="sha-name sha-broken">SHA-1</div>
+    <div class="sha-desc">❌ Broken — collisions discovered (never use)</div>
+  </div>
+
+  <div class="sha-row">
+    <div class="sha-name sha-good">SHA-256</div>
+    <div class="sha-desc">✅ Modern standard — fast, secure, widely approved</div>
+  </div>
+
+  <div class="sha-row">
+    <div class="sha-name sha-good">SHA-384</div>
+    <div class="sha-desc">🔐 DoD Suite-B ECC-384 cryptography</div>
+  </div>
+
 
       <div class="sha-row">
         <div class="sha-name sha-good">SHA-512</div>
