--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-5. Why NOVAK Uses SHA-256<!-- ✅ NOVAK Protocol — Final Public Demo Build (PART 1 of 3) -->
+<!-- ✅ NOVAK Protocol — Final Public Demo Build (PART 1 of 3) -->
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
