--- a/index.html
+++ b/index.html
@@ -2246,6 +2246,12 @@ async function startAvalanche() {
      style="display:none; margin-top:20px; font-family:'JetBrains Mono', monospace; font-size:14px;">
 </div>
 
+<!-- ========================================= -->
+<!-- 💻 Why TLS, Blockchain & Bitcoin Cannot Prevent Automated Harm — but NOVAK Can    -->
+<!-- ========================================= -->
+<div class="card" style="margin-top:28px; padding:20px;">
+
+  
 <!-- ✅ COMPARISON SECTION -->
 <details class="novak-collapse">
   <summary>🔍 Why TLS, Blockchain & Bitcoin Cannot Prevent Automated Harm — but NOVAK Can</summary>
