--- a/index.html
+++ b/index.html
@@ -1179,6 +1179,9 @@ One tiny change → completely different hash.
       </div>
     </details>
 
+        </div>
+    </details>
+
 
 <!-- ======================================================= -->
 <!-- ⭐ NOVAK SHA EDUCATION SUITE — SINGLE EXPANDABLE MODULE -->
@@ -1300,7 +1303,6 @@ DATA → [ SHA Machine ] → UNIQUE HASH
     <div class="sha-desc">🔐 DoD Suite-B ECC-384 cryptography</div>
   </div>
 
-
       <div class="sha-row">
         <div class="sha-name sha-good">SHA-512</div>
         <div class="sha-desc">🔒 Strongest SHA-2 variant (512-bit state)</div>
@@ -1321,7 +1323,7 @@ DATA → [ SHA Machine ] → UNIQUE HASH
 
     <h2>🟩 3. Where SHA Is Used in Real Life</h2>
 
-    <pre class="diagram-box">
+<pre class="diagram-box">
 VA / Federal Agencies     → SHA-256
 Healthcare Systems        → SHA-256
 Banking & IRS             → SHA-256 / SHA-512
@@ -1329,25 +1331,27 @@ TLS / HTTPS Certificates  → SHA-256 / SHA-384
 DoD / Nat. Security       → SHA-384
 Bitcoin                   → SHA-256
 Ethereum                  → Keccak (SHA-3 family)
+</pre>
 
-    <p>
-      SHA protects websites, banking, federal systems, medical systems, 
-      military communications, blockchain, and your everyday devices.
-    </p>
-      
+<p>
+  SHA protects websites, banking, federal systems, medical systems,
+  military communications, blockchain, and your everyday devices.
+</p>
 
-    <details class="sub-collapse" style="margin-top:32px;">
-      <summary>📊 SHA vs MD5 vs CRC (Click to Compare)</summary>
-      <div class="sub-card">
+<details class="sub-collapse" style="margin-top:32px;">
+  <summary>📊 SHA vs MD5 vs CRC (Click to Compare)</summary>
+  <div class="sub-card">
+<pre>
 ALGORITHM | SECURITY     | USE TODAY
 ----------|--------------|----------------------
 CRC32     | ❌ None       | File transfers only
 MD5       | ❌ Broken     | Legacy checks
 SHA-256   | ✅ Strong     | NOVAK, VA, DoD, banking
 SHA-3     | 🧪 New       | Crypto research, Ethereum
-        </pre>
-      </div>
-    </details>
+</pre>
+  </div>
+</details>
+
 
     </pre>
 
