--- a/index.html
+++ b/index.html
@@ -2407,9 +2407,10 @@ async function startAvalanche() {
     <button class="pill-btn" onclick="startGame('tamper')">🕵️ Spot the Tampering</button>
     <button class="pill-btn" onclick="startGame('memory')">🧠 Hash Memory Match</button>
     <button class="pill-btn" onclick="startGame('fraud')">🚨 Fraud Detector</button>
+    <button class="pill-btn" onclick="startGame('avalanche')">⚡ Avalanche Animation (NOT WORKING)</button>
   </div>
 
-  <!-- game sound toggle -->
+    <!-- game sound toggle -->
   <button onclick="toggleSound()"
           class="sound-toggle"
           aria-label="Toggle game sound"
