--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   padding: 14px;
   border-radius: 8px;
   font-family: 'JetBrains Mono', monospace;
-  white-space: pre-wrap;
+  text-align: center;        /* NEW FIX */
+  white-space: pre-wrap;     /* already present */
   margin-top: 12px;
 }
 
