--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
   text-align: center;   /* ✅ FIX ALIGNMENT */
 }
 
+.diagram-box pre { 
+  text-align: center; 
+}
+
+.diagram-box { 
+  text-align: center; 
+}
+
+    
 .sha-table { margin-top: 14px; }
 .sha-row { display: flex; gap: 14px; margin-bottom: 8px; }
 .sha-name { width: 110px; font-weight: 700; padding:6px 10px; border-radius:6px; text-align:center; }
