--- a/index.html
+++ b/index.html
@@ -1163,21 +1163,12 @@ INPUT  →  [ SHA Blender ]  →  UNIQUE OUTPUT
     </p>
 
     <p>
-      SHA turns it all into a <strong>64-character fingerprint</strong>.
+      SHA turns it all into a <strong>64 hex character one-way fingerprint</strong>.
     </p>
 
     <p style="font-weight:600;">
       Change even ONE letter → the entire fingerprint becomes totally different.
     </p>
-
-
-    <p>
-      SHA is a <strong>Secure Hash Algorithm</strong> — a one-way fingerprint machine.
-    </p>
-
-    <pre class="diagram-box">
-DATA → [ SHA Machine ] → UNIQUE HASH
-    </pre>
 
     <p>
       One tiny change gives a totally different fingerprint.  
