--- a/index.html
+++ b/index.html
@@ -1116,30 +1116,10 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
     🔐 NOVAK SHA Knowledge Center — Simple → Deep → Interactive → Technical → Diagrams → NOVAK Use
   </summary>
 
-      <!-- ====================================================== -->
-    <!-- 6. AVALANCHE EFFECT -->
-    <!-- ====================================================== -->
-    <details class="sub-collapse" style="margin-top:32px;">
-      <summary>⚡ Avalanche Effect (Click to Expand)</summary>
-      <div class="sub-card">
-        <pre class="diagram-box">
-"TEST" → 94ee0593…  
-"TeST" → 8d3b72f1…  
-"test" → 9f86d081…
-
-One tiny change → completely different hash.
-        </pre>
-        <p>
-          This effect makes SHA perfect for catching silent corruption or fraud.
-        </p>
-      </div>
-    </details>
-
   <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
 
-
     <!-- =================================================== -->
-    <!-- 1. SIMPLE / 6TH GRADE EXPLANATION -->
+    <!-- 1. SIMPLE EXPLANATION -->
     <!-- =================================================== -->
     <h2 style="margin-top:0;">🟦 1. SHA Explained (Simple Terms)</h2>
 
