--- a/index.html
+++ b/index.html
@@ -1330,6 +1330,157 @@ ONE tiny change → COMPLETELY different hash.
       NOVAK’s integrity model stays the same — only the math block swaps.
     </p>
 
+<!-- =================================================== -->
+<!-- 8. HOW NOVAK USES SHA DIFFERENTLY (THE GATE MODEL) -->
+<!-- =================================================== -->
+<hr style="margin:26px 0; opacity:0.35;">
+
+<h2>🛡️ 8. How NOVAK Uses SHA Differently (SHA → Gate Instead of Log)</h2>
+
+<p>
+  SHA today is used mostly as a <strong>log</strong> — a way to record what happened.
+  NOVAK transforms SHA into a <strong>gate</strong> — a way to decide what is
+  <em>allowed</em> to happen.
+</p>
+
+<p style="margin-top:12px; font-weight:600;">
+  This single shift is why NOVAK stops invisible tampering while
+  today’s systems only detect it after harm.
+</p>
+
+<!-- =================================================== -->
+<!-- 8A. SIMPLE EXPLANATION -->
+<!-- =================================================== -->
+
+<details class="sub-collapse" style="margin-top:18px;">
+  <summary>🟦 Simple Explanation — “How NOVAK Uses SHA”</summary>
+  <div class="sub-card">
+    <p>
+      SHA makes a fingerprint of your data.  
+      NOVAK uses that fingerprint as a <strong>lock</strong>.
+    </p>
+
+    <p>
+      If <strong>anything</strong> changes — even a single character —
+      the fingerprint changes.
+    </p>
+
+    <p style="font-weight:600;">
+      NOVAK checks the fingerprint BEFORE the system is allowed to act.
+    </p>
+
+    <ul style="margin-left:20px;">
+      <li>✔ If input is unchanged → action allowed</li>
+      <li>✔ If rule is unchanged → action allowed</li>
+      <li>✔ If output matches → action allowed</li>
+      <li>❌ If ANYTHING changes → NOVAK refuses execution</li>
+    </ul>
+
+    <p style="margin-top:10px; font-weight:600;">
+      SHA becomes a <strong>gatekeeper</strong>, not a passive log.
+    </p>
+  </div>
+</details>
+
+<!-- =================================================== -->
+<!-- 8B. TECHNICAL EXPLANATION -->
+<!-- =================================================== -->
+
+<details class="sub-collapse" style="margin-top:18px;">
+  <summary>🧠 Deep Technical Explanation — “How NOVAK Uses SHA Architecturally”</summary>
+  <div class="sub-card">
+    <p>
+      Traditional systems compute hashes for:
+      <br>• logging  
+      • storage integrity  
+      • file verification  
+      • blockchain syncing  
+    </p>
+
+    <p style="margin-top:10px;">
+      But these hashes are <strong>not enforced before execution</strong>.
+      Systems run even if data changed, hashes mismatch, or corruption occurred.
+    </p>
+
+    <p style="margin-top:12px; font-weight:600;">
+      NOVAK introduces a cryptographic enforcement layer:
+    </p>
+
+<pre class="diagram-box" style="white-space:pre; text-align:center;">
+INPUT + RULE + EXPECTED OUTPUT
+          │
+      [ SHA-256 ]
+          ↓
+   HVET / EIR Receipt
+          ↓
+NOVAK GATE (Allow? Block?)
+</pre>
+
+    <ul style="margin-left:20px; margin-top:14px;">
+      <li>✔ Fingerprint must match EXACTLY</li>
+      <li>✔ Input, rule, and output must all bind together</li>
+      <li>✔ EIR receipt must match previous approved truth</li>
+      <li>✔ If ANY element differs → NOVAK blocks execution</li>
+    </ul>
+
+    <p style="margin-top:14px;">
+      This creates <strong>deterministic, cryptographically provable execution</strong>.
+    </p>
+  </div>
+</details>
+
+<!-- =================================================== -->
+<!-- 8C. DIAGRAM — SHA TODAY vs NOVAK -->
+<!-- =================================================== -->
+
+<h3 style="margin-top:26px; font-size:20px; text-align:center;">
+📊 SHA Today vs NOVAK — Side-By-Side
+</h3>
+
+<pre class="diagram-box" style="white-space:pre; text-align:center;">
+SYSTEM               | WHEN CHECKS OCCUR | WHAT IT GUARANTEES     | CAN IT STOP BAD ACTION?
+---------------------|-------------------|-------------------------|--------------------------
+SHA Today (Typical)  | After action      | Integrity record        | ❌ No
+TLS / SSL            | During transit    | Encryption only         | ❌ No
+Logging / SIEM       | After action      | Audit trail             | ❌ No
+Blockchain           | After action      | Ledger correctness      | ❌ No
+
+NOVAK Protocol       | BEFORE action     | Input=Rule=Output match | ✅ YES
+</pre>
+
+<p style="margin-top:16px;">
+  NOVAK is the <strong>first system</strong> to use SHA as a <em>pre-execution cryptographic gate</em>.
+</p>
+
+<!-- =================================================== -->
+<!-- 8D. WHY THIS ISN'T DONE TODAY -->
+<!-- =================================================== -->
+
+<h3 style="margin-top:32px; font-size:20px;">❓ Why Isn’t This Already Being Done?</h3>
+
+<ul style="margin-left:20px; margin-top:8px; line-height:1.6;">
+  <li>• Legacy systems only verify <strong>after</strong> execution (logging model)</li>
+  <li>• No existing standard mandates proof-before-action</li>
+  <li>• Most agencies rely on “trust the system,” not “prove correctness”</li>
+  <li>• Hash checks are usually optional — not enforced at the execution layer</li>
+</ul>
+
+<p style="margin-top:12px; font-weight:600;">
+  NOVAK changes this permanently by making proof a <strong>mandatory precondition</strong>  
+  for automated action.
+</p>
+
+<!-- =================================================== -->
+<!-- 8E. THE ENTIRE DIFFERENCE SUMMARIZED -->
+<!-- =================================================== -->
+
+<h3 style="margin-top:26px; font-size:20px;">🔑 The Entire Difference in One Sentence</h3>
+
+<p style="font-weight:700; font-size:17px; margin-top:10px;">
+  <strong>SHA today tells you what happened.</strong><br>
+  <strong>NOVAK uses SHA to decide what is allowed to happen.</strong>
+</p>
+ 
   </div>
 </details>
 
